inc/widgets-css/frontend.css
/* Counter Widget CSS */
.hfe-counter-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}

.hfe-counter-content {
    display: flex;
    align-items: center;
    justify-content: center;
}


.hfe-counter-number {
    font-weight: bold;
    font-size: 48px;
    line-height: 1;
}

.hfe-counter-title {
    font-size: 18px;
    line-height: 1.2;
    margin: 0;
}

.hfe-counter-prefix,
.hfe-counter-suffix {
    font-size: inherit;
    line-height: inherit;
}

.hfe-counter-prefix {
    margin-right: 5px;
}

.hfe-counter-suffix {
    margin-left: 5px;
}


/* Title styling */
.hfe-counter-title {
    margin: 0;
    text-align: center;
    flex-shrink: 0;
}

/* Ensure counter content doesn't shrink */
.hfe-counter-content {
    flex-shrink: 0;
}

/* Responsive adjustments */
@media (max-width: 767px) {
    .hfe-counter-number {
        font-size: 36px;
    }
    
    .hfe-counter-title {
        font-size: 16px;
    }
}

/* Navigation Menu CSS */

ul.hfe-nav-menu,
.hfe-nav-menu li,
.hfe-nav-menu ul {
    list-style: none !important;
    margin: 0;
    padding: 0;
}

.hfe-nav-menu li.menu-item {
    position: relative;
}

.hfe-flyout-container .hfe-nav-menu li.menu-item {
    position: relative;
    background: unset;
}

.hfe-nav-menu .sub-menu li.menu-item {
    position: relative;
    background: inherit;
}
.hfe-nav-menu__theme-icon-yes button.sub-menu-toggle {
    display: none;
}

div.hfe-nav-menu,
.elementor-widget-hfe-nav-menu .elementor-widget-container{
    -js-display: flex;
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -moz-box-orient: vertical;
    -moz-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
}

.hfe-nav-menu__layout-horizontal,
.hfe-nav-menu__layout-horizontal .hfe-nav-menu {
    -js-display: flex;
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-box;
    display: -ms-flexbox;
    display: flex;
}

.hfe-nav-menu__layout-horizontal .hfe-nav-menu {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}

.hfe-nav-menu .parent-has-no-child .hfe-menu-toggle {
    display: none;
}

.hfe-nav-menu__layout-horizontal .hfe-nav-menu .sub-menu,
.hfe-submenu-action-hover .hfe-layout-vertical .hfe-nav-menu .sub-menu {
    position: absolute;
    top: 100%;
    left: 0;
    z-index: 16;
    visibility: hidden;
    opacity: 0;
    text-align: left;
    -webkit-transition: all 300ms ease-in;
    transition: all 300ms ease-in;
}

.hfe-nav-menu__layout-horizontal .hfe-nav-menu .menu-item-has-children:hover > .sub-menu,
.hfe-nav-menu__layout-horizontal .hfe-nav-menu .menu-item-has-children:focus > .sub-menu {
    visibility: visible;
    opacity: 1;
}

.hfe-submenu-action-click .hfe-nav-menu .menu-item-has-children:hover > .sub-menu,
.hfe-submenu-action-click .hfe-nav-menu .menu-item-has-children:focus > .sub-menu {
    visibility: hidden;
    opacity: 0;
}

.hfe-nav-menu .menu-item-has-children .sub-menu {
    position: absolute;
    top: 100%;
    left: 0;
    z-index: 9999;
    visibility: hidden;
    opacity: 0;
}

.hfe-flyout-container .hfe-nav-menu .menu-item-has-children .menu-item-has-children .sub-menu {
    top: 0;
    left: 0;
}

.hfe-nav-menu .menu-item-has-children .menu-item-has-children .sub-menu {
    top: 0;
    left: 100%;
}

.hfe-nav-menu__layout-horizontal .hfe-nav-menu .menu-item-has-children:hover > .sub-menu,
.hfe-nav-menu__layout-horizontal .hfe-nav-menu .menu-item-has-children.focus > .sub-menu {
    visibility: visible;
    opacity: 1;
    -webkit-transition: all 300ms ease-out;
    transition: all 300ms ease-out;
}

.hfe-nav-menu:before,
.hfe-nav-menu:after {
    content: '';
    display: table;
    clear: both;
}

/* Alignemnt CSS */
.hfe-nav-menu__align-right .hfe-nav-menu {
  margin-left: auto;
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          -webkit-justify-content: flex-end;
          -moz-box-pack: end;
          justify-content: flex-end; }

.hfe-nav-menu__align-right .hfe-nav-menu__layout-vertical li a.hfe-menu-item,
.hfe-nav-menu__align-right .hfe-nav-menu__layout-vertical li a.hfe-sub-menu-item {
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          -webkit-justify-content: flex-end;
          -moz-box-pack: end;
          justify-content: flex-end; }

.hfe-nav-menu__align-right .hfe-nav-menu__layout-vertical li.hfe-has-submenu .hfe-button-wrapper,
.rtl .hfe-nav-menu__align-left .hfe-nav-menu__layout-vertical li.hfe-has-submenu .hfe-button-wrapper,
.hfe-nav-menu__align-right .hfe-nav-menu__layout-vertical li.hfe-button-wrapper,
.rtl .hfe-nav-menu__align-left .hfe-nav-menu__layout-vertical li.hfe-button-wrapper{
    text-align: right;
}
.hfe-nav-menu__align-left .hfe-nav-menu__layout-vertical li.hfe-has-submenu .hfe-button-wrapper,
.rtl .hfe-nav-menu__align-right .hfe-nav-menu__layout-vertical li.hfe-has-submenu .hfe-button-wrapper,
.hfe-nav-menu__align-left .hfe-nav-menu__layout-vertical li.hfe-button-wrapper,
.rtl .hfe-nav-menu__align-right .hfe-nav-menu__layout-vertical li.hfe-button-wrapper{
    text-align: left;
}
.hfe-nav-menu__align-center .hfe-nav-menu__layout-vertical li.hfe-has-submenu .hfe-button-wrapper,
.hfe-nav-menu__align-center .hfe-nav-menu__layout-vertical li.hfe-button-wrapper{
    text-align: center;
}
.hfe-nav-menu__align-left .hfe-nav-menu {
  margin-right: auto;
  -webkit-box-pack: start;
      -ms-flex-pack: start;
          -webkit-justify-content: flex-start;
          -moz-box-pack: start;
          justify-content: flex-start; }
/* ... */

